# agents-wiki

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: functions.rs  scaling.rs
scripts/: install.ps1  install.sh
skills/agents-wiki/: GUIDE.md  SKILL.md
src/: args.rs  context.rs  health.rs  knowledge.rs  lib.rs  lifecycle.rs  main.rs  manifest.rs  setup.rs  skills.rs  update.rs  util.rs
