[package]
name = "agents-wiki"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Local-first Obsidian wiki tooling for AI agents"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
url = "2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "scaling"
harness = false

[[bench]]
name = "functions"
harness = false
